--- a/frontend/myapp/src/Workouts.css
+++ b/frontend/myapp/src/Workouts.css
@@ -10,7 +10,6 @@
 .body-metrics-container, .muscle-groups-container, .macro-calc-container{
     display: flex;
     flex-direction: column;
-    font-family: fantasy;
     text-align: center;
     background-color: rgb(193, 164, 17);
     border-radius: 0 0 20% 20%;
@@ -41,13 +40,6 @@
 button{
     background-color: #065187;
     color: #2980B9;
-    margin: 5px;
-    border-radius: 5px;
-    margin: 10px;
-    padding: 2px;
-    border-radius: 20px;
-    height: 50px;
-    border: dotted;
 }
 
 /*GTC changes the width of the columns*/
@@ -58,7 +50,7 @@ button{
 }
 
 /*Margin changes the width of the grid items inside of the container divs*/
-.grid-workout-item{
+.grid-workout-item, .macro-calc-item{
     text-align: center;
     font-weight: bold;
     color: #2980B9;
@@ -67,6 +59,7 @@ button{
     padding: 2px;
     border-radius: 20px;
     height: 50px;
+    border: dotted;
 }
 
 /* Hover Theme */
