--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -1,4 +1,12 @@
 
+/* Responsive Design.  The display will break the schedule down into 2 columns for laptop and desktop screens. */
+@media (min-width: 1400px) {
+.Full-ScheduleUi-Container{
+    display: grid;
+    flex-direction: column;    
+    grid-template-columns: 50% 50%;
+}}
+
 .scheduleButtonOn{
     display: flex;
     border-radius: 50%;
