--- a/frontend/myapp/src/ThemeTesting.css
+++ b/frontend/myapp/src/ThemeTesting.css
@@ -7,3 +7,9 @@
     padding: 10px;
     border-radius: 10px;
 }
+
+/* @media (min-width: 1400px) */
+/* @media (max-width: 1000px) */
+
+/* Wide Screen Curved */
+/* (max-width: 2500px) */
