--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -5,6 +5,13 @@
     display: grid;
     flex-direction: column;    
     grid-template-columns: 50% 50%;
+    /* width: 50vw; */
+    justify-content: center;
+    padding: 19vw;
+    padding-top: 1vh;
+    padding-bottom: 10vh;
+
+    
 }}
 
 .scheduleButtonOn{
