--- a/frontend/myapp/src/StagesUi.css
+++ b/frontend/myapp/src/StagesUi.css
@@ -15,6 +15,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        align-items: center;
         }
     }
     
@@ -23,7 +24,8 @@
 .circles{
     color: white;
     border-radius: 60%;
-    padding: 40%;
+    /* padding: 40%; */
+    padding: 5vh 1vw;
     background-color: rgba(0, 128, 128, 0.725);
     font-size: 30px;
     border: solid;
@@ -39,9 +41,11 @@
     font-size: 15px;
     border: solid;
     border-color: grey;
+    padding: 3vh 1vw;
     }
 }
 
+/* Theme of the Phase Area */
 .GridTemp{
     display: grid;
     border: solid;
