--- a/frontend/myapp/src/ThemeTesting.css
+++ b/frontend/myapp/src/ThemeTesting.css
@@ -8,6 +8,8 @@
     border-radius: 10px;
 }
 
+
+/* @media (max-width: 428px) */
 /* @media (min-width: 1400px) */
 /* @media (max-width: 1000px) */
 
