dev-storyui-v1.0.1 Refactored the css for the story cards.  Focused on the large screen display to make sure that the app is more usable on a 1400 min px wide laptop.  Added drop down lists for the cards as well.

--- a/frontend/myapp/src/MainToDoList.css
+++ b/frontend/myapp/src/MainToDoList.css
@@ -1,7 +1,10 @@
-.accountability-list-title{
+.todo-title{
     font-family: RubikDirt-Regular;
     display: flex;
     justify-self: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 75px;
 }
 
 .MainToDo-Container{
