--- a/frontend/myapp/src/Schedule.css
+++ b/frontend/myapp/src/Schedule.css
@@ -75,6 +75,17 @@
     align-self: center;
 }   
 
+.resetButton{
+    display: flex;
+    border-radius: 10px;
+    border-color: grey;
+    /* height: 20px; */
+    /* width: 20px; */
+    margin: 2px;
+    align-self: center;
+    background-color: #9df0b2;
+}
+
 /* laptop 1500 works too */
 @media (min-width: 1400px) {
 .Container-ScheduleUi-main{
@@ -84,7 +95,7 @@
     justify-content: space-between;
     /* width: 100%; */
     /* Changed from 10/15/75 */
-    grid-template-columns: 12.5% 15% 72.5%;
+    grid-template-columns: 25px 100px 250px;
     /* padding: 20px; */
     background-color: rgba(242, 203, 180, 0.674);
     /* margin: 10px; */
@@ -160,9 +171,10 @@
     flex-direction: row;
     /* justify-content: center; */
     /* align-items: center; */
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    /* margin-left: 10px; */
+    /* margin-top: 10px;
+    margin-bottom: 10px; */
+    margin: 10px;
     }
 }
 
