--- a/frontend/agileplanner/src/Schedule.css
+++ b/frontend/agileplanner/src/Schedule.css
@@ -130,6 +130,7 @@
     /* width: 100%; */
     background-color: hsl(215, 74%, 93%);
     padding: 10px;
+    height: 10vh;
     /* background-color: rgba(249, 180, 140, 0.674); */
     margin: 10px;
     border-radius: 20px 20px 20px 20px;
